tests/invalid/bind_var_errors.err_exp
bind_var_errors.m:031: In clause for `bind_var_in_negation':
bind_var_errors.m:031:   scope error: attempt to bind a variable inside a negation.
bind_var_errors.m:031:   Variable `X' has instantiatedness `free',
bind_var_errors.m:031:   expected instantiatedness was `unique(42)'.
bind_var_errors.m:037: In clause for `bind_var_in_ite_cond(in)':
bind_var_errors.m:037:   scope error: attempt to bind a non-local variable inside the
bind_var_errors.m:037:   condition of an if-then-else.
bind_var_errors.m:037:   Variable `Y' has instantiatedness `free',
bind_var_errors.m:037:   expected instantiatedness was `unique(42)'.
bind_var_errors.m:046: In clause for `bind_var_in_lambda':
bind_var_errors.m:046:   scope error: attempt to bind a non-local variable inside
bind_var_errors.m:046:   a pred lambda goal.
bind_var_errors.m:046:   Variable `Y' has instantiatedness `free',
bind_var_errors.m:046:   expected instantiatedness was `unique(42)'.
bind_var_errors.m:056: In clause for `clobber_var_in_lambda(di)':
bind_var_errors.m:056:   in argument 1 of call to predicate `bind_var_errors:destroy/1':
bind_var_errors.m:056:   unique-mode error: the called procedure would clobber
bind_var_errors.m:056:   its argument, but variable `X' is still live.
For more information, try recompiling with `-E'.
